--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
   font-family: "Protest Riot", sans-serif;
   box-sizing: border-box;
 }
-
 body {
   width: 100%;
   max-height: 100vh;
@@ -12,7 +11,6 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
-
 h1 {
   text-align: center;
   font-size: 3rem;
@@ -24,6 +22,8 @@ h1 {
 #todo-app {
   width: 180%;
   max-width: 480px;
+  max-height:480px;
+  overflow: auto;
   margin: 200px auto 20px;
   padding: 50px 30px 80px;
   background: #fef2f4;
@@ -141,7 +141,6 @@ input {
     background-repeat: no-repeat;
     background-size: cover;
   }
-
   h1 {
     text-align: center;
     font-size: 2rem;
